--- a/worksheet4/styles.css
+++ b/worksheet4/styles.css
@@ -167,3 +167,24 @@ li{
     color: navy;
     font-size: 20px;
 }
+
+button {
+    border: 1px solid blueviolet;
+    border-radius: 5px;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: large;
+    padding: 10px;
+    margin: 2px;
+    transition-duration: .4s;
+}
+
+button:hover{
+    background-color: limegreen;
+    color: white;
+}
+
+button:active{
+    background-color: green;
+    box-shadow: 0 5px darkred;
+    transform: translateY(4px);
+}
